Add new custom buttom

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="button">
         <button>
-            <a class="link" href="#">Log-in</a>
+            <a class="link" href="#"><span>Log-in</span></a>
         
             </button>
     </div>
